--- a/index.ipynb
+++ b/index.ipynb
@@ -61,11 +61,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open('ny_times_movies.json', 'r')\n",
+    "data = json.load(f)"
    ]
   },
   {
@@ -79,11 +89,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>byline</th>\n",
+       "      <th>critics_pick</th>\n",
+       "      <th>date_updated</th>\n",
+       "      <th>display_title</th>\n",
+       "      <th>headline</th>\n",
+       "      <th>link</th>\n",
+       "      <th>mpaa_rating</th>\n",
+       "      <th>multimedia</th>\n",
+       "      <th>opening_date</th>\n",
+       "      <th>publication_date</th>\n",
+       "      <th>summary_short</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A.O. SCOTT</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-10-17 02:44:23</td>\n",
+       "      <td>Can You Ever Forgive Me</td>\n",
+       "      <td>Review: Melissa McCarthy Is Criminally Good in...</td>\n",
+       "      <td>{'type': 'article', 'url': 'http://www.nytimes...</td>\n",
+       "      <td>R</td>\n",
+       "      <td>{'type': 'mediumThreeByTwo210', 'src': 'https:...</td>\n",
+       "      <td>2018-10-19</td>\n",
+       "      <td>2018-10-16</td>\n",
+       "      <td>Marielle Heller directs a true story of litera...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BEN KENIGSBERG</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-10-16 11:04:03</td>\n",
+       "      <td>Charm City</td>\n",
+       "      <td>Review: â€˜Charm Cityâ€™ Vividly Captures the ...</td>\n",
+       "      <td>{'type': 'article', 'url': 'http://www.nytimes...</td>\n",
+       "      <td></td>\n",
+       "      <td>{'type': 'mediumThreeByTwo210', 'src': 'https:...</td>\n",
+       "      <td>2018-04-22</td>\n",
+       "      <td>2018-10-16</td>\n",
+       "      <td>Marilyn Nessâ€™s documentary is dedicated to t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GLENN KENNY</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-10-16 11:04:04</td>\n",
+       "      <td>Horn from the Heart: The Paul Butterfield Story</td>\n",
+       "      <td>Review: Paul Butterfieldâ€™s Story Is Told in ...</td>\n",
+       "      <td>{'type': 'article', 'url': 'http://www.nytimes...</td>\n",
+       "      <td></td>\n",
+       "      <td>{'type': 'mediumThreeByTwo210', 'src': 'https:...</td>\n",
+       "      <td>2018-10-19</td>\n",
+       "      <td>2018-10-16</td>\n",
+       "      <td>A documentary explores the life of the blues m...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A. O. SCOTT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2018-10-16 16:08:03</td>\n",
+       "      <td>The Price of Everything</td>\n",
+       "      <td>Review: â€˜The Price of Everythingâ€™ Asks $56...</td>\n",
+       "      <td>{'type': 'article', 'url': 'http://www.nytimes...</td>\n",
+       "      <td></td>\n",
+       "      <td>{'type': 'mediumThreeByTwo210', 'src': 'https:...</td>\n",
+       "      <td>2018-10-19</td>\n",
+       "      <td>2018-10-16</td>\n",
+       "      <td>This documentary examines the global art marke...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BEN KENIGSBERG</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2018-10-16 11:04:03</td>\n",
+       "      <td>Impulso</td>\n",
+       "      <td>Review: â€˜Impulsoâ€™ Goes Backstage With a Fl...</td>\n",
+       "      <td>{'type': 'article', 'url': 'http://www.nytimes...</td>\n",
+       "      <td></td>\n",
+       "      <td>{'type': 'mediumThreeByTwo210', 'src': 'https:...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2018-10-16</td>\n",
+       "      <td>This documentary follows RocÃ­o Molina, a cutt...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           byline  critics_pick         date_updated  \\\n",
+       "0      A.O. SCOTT             1  2018-10-17 02:44:23   \n",
+       "1  BEN KENIGSBERG             1  2018-10-16 11:04:03   \n",
+       "2     GLENN KENNY             1  2018-10-16 11:04:04   \n",
+       "3     A. O. SCOTT             0  2018-10-16 16:08:03   \n",
+       "4  BEN KENIGSBERG             0  2018-10-16 11:04:03   \n",
+       "\n",
+       "                                     display_title  \\\n",
+       "0                          Can You Ever Forgive Me   \n",
+       "1                                       Charm City   \n",
+       "2  Horn from the Heart: The Paul Butterfield Story   \n",
+       "3                          The Price of Everything   \n",
+       "4                                          Impulso   \n",
+       "\n",
+       "                                            headline  \\\n",
+       "0  Review: Melissa McCarthy Is Criminally Good in...   \n",
+       "1  Review: â€˜Charm Cityâ€™ Vividly Captures the ...   \n",
+       "2  Review: Paul Butterfieldâ€™s Story Is Told in ...   \n",
+       "3  Review: â€˜The Price of Everythingâ€™ Asks $56...   \n",
+       "4  Review: â€˜Impulsoâ€™ Goes Backstage With a Fl...   \n",
+       "\n",
+       "                                                link mpaa_rating  \\\n",
+       "0  {'type': 'article', 'url': 'http://www.nytimes...           R   \n",
+       "1  {'type': 'article', 'url': 'http://www.nytimes...               \n",
+       "2  {'type': 'article', 'url': 'http://www.nytimes...               \n",
+       "3  {'type': 'article', 'url': 'http://www.nytimes...               \n",
+       "4  {'type': 'article', 'url': 'http://www.nytimes...               \n",
+       "\n",
+       "                                          multimedia opening_date  \\\n",
+       "0  {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-19   \n",
+       "1  {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-04-22   \n",
+       "2  {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-19   \n",
+       "3  {'type': 'mediumThreeByTwo210', 'src': 'https:...   2018-10-19   \n",
+       "4  {'type': 'mediumThreeByTwo210', 'src': 'https:...         None   \n",
+       "\n",
+       "  publication_date                                      summary_short  \n",
+       "0       2018-10-16  Marielle Heller directs a true story of litera...  \n",
+       "1       2018-10-16  Marilyn Nessâ€™s documentary is dedicated to t...  \n",
+       "2       2018-10-16  A documentary explores the life of the blues m...  \n",
+       "3       2018-10-16  This documentary examines the global art marke...  \n",
+       "4       2018-10-16  This documentary follows RocÃ­o Molina, a cutt...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = pd.DataFrame(data['results'])\n",
+    "results.head()"
    ]
   },
   {
@@ -95,11 +273,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "len(results['byline'].value_counts())"
    ]
   },
   {
@@ -111,11 +300,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "for result in data['results']:\n",
+    "    result['URL'] = result['link']['url']"
    ]
   },
   {
@@ -127,11 +317,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "len(data['results'])"
    ]
   },
   {
@@ -145,9 +346,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -159,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
